# scrambled-mnist

./: .gitignore  LICENSE  README.md  augment.py  cli.py  config.json  config.py  convert.py  dataloader.py  download.py  dvc.yaml  hypers.json  metrics.py  network.py  prompt.txt  pyproject.toml  report.txt  seed.py  test.py  train.py
.dvc/: config
.tmp/: .gitignore
ext_tests/: convert_mnist_c.py  dwnld_mnist_c.py  dwnld_mnist_c.sh
ext_tests/mnist_c/: download.py  extract.py  test.py
saved_models/: .gitignore
