[project]
name = "scramble-mnist"
package-mode = false
version = "0.1.0"
description = "Train deep neural net on MNIST + scrambled MNIST"
authors = [
    {name = "Farhan Ahmad",email = "farhanhubble@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc[ssh] (>=3.59.1,<4.0.0)",
    "kagglehub (>=0.3.10,<0.4.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
